--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -161,7 +161,7 @@
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
 
-\newcommand{\iseq}[3]{\mathsf{Eq}_{#1, #2}^{#3}}
+\newcommand{\iseq}[2]{\mathsf{Eq}_{#1}^{#2}}
 
 \newcommand{\isind}{\mathsf{HasTy}}
 
