--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -47,6 +47,8 @@
 
 \newcommand{\consts}{C}
 
+\newcommand{\copyrel}[2]{\approx_{#1}^{#2}}
+
 \newcommand{\ctrclause}[3]{ #1 \bowtie #2 \preceq #3 }
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
@@ -122,6 +124,8 @@
 \newcommand{\fresh}{\mathsf{Fresh}}
 
 \newcommand{\fullprepend}[2]{\concat_{#1}^{#2}}
+
+\newcommand{\hasreltype}[1]{\sim_{#1}}
 
 \newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
 
